created getCongresses and getCongressById and docs and tests
